--- a/JS-t1/T-6.html
+++ b/JS-t1/T-6.html
@@ -6,11 +6,18 @@
 </head>
 <body>
  <script>
-     let leiviska,naula,luoti,kilo, gramma, massa;
-     leiviska = prompt('Syötä massa leivisköinä');
-     naula = prompt('Syötä massa nauloina');
-     luoti = prompt('Syötä massa luoteina');
-     massa =
+     let leiviskax,naulax,luotix,kilo, gramma, massa1,massa2,massa3,tulos, luoti, naula, leiviska;
+     leiviskax = prompt('Syötä massa leivisköinä');
+     naulax = prompt('Syötä massa nauloina');
+     luotix = prompt('Syötä massa luoteina');
+     luoti = 13.3;
+     naula = 425.6;
+     leiviska = 8512;
+     massa1 = luotix * luoti;
+     massa2 = naulax * naula;
+     massa3 = leiviskax * leiviska;
+     tulos = massa1 + massa2 + massa3;
+     document.write('')
  </script>
 </body>
 </html>
