--- a/JS-t1/T-6.html
+++ b/JS-t1/T-6.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  <script>
-     let leiviskax,naulax,luotix,kilo, gramma, massa1,massa2,massa3,tulos, luoti, naula, leiviska;
+     let leiviskax,naulax,luotix,kilo,grammaero,gramma, massa1,massa2,massa3,tulos, luoti, naula, leiviska;
      leiviskax = prompt('Syötä massa leivisköinä');
      naulax = prompt('Syötä massa nauloina');
      luotix = prompt('Syötä massa luoteina');
@@ -16,8 +16,11 @@
      massa1 = luotix * luoti;
      massa2 = naulax * naula;
      massa3 = leiviskax * leiviska;
-     tulos = massa1 + massa2 + massa3;
-     document.write('')
+     tulos = Math.floor(massa1 + massa2 + massa3);
+     kilo = Math.floor(tulos/1000);
+     grammaero = kilo * 1000;
+     gramma = tulos - grammaero;
+     document.write(kilo, ' Kilogrammaa ja ' + gramma, ' grammaa' );
  </script>
 </body>
 </html>
