--- a/JS-t2/js-t1.html
+++ b/JS-t2/js-t1.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-
+ <script>
+     let pituus, tulos;
+     pituus = prompt('Syötä kuhan pituus (cm)');
+     tulos = 37 - pituus;
+     if (pituus<37) {
+       document.write('Kuha on ' + tulos, ' cm liian pieni, laske se takaisin veteen!');
+     }
+ </script>
 </body>
 </html>
