--- a/JS-t3/js-t3.html
+++ b/JS-t3/js-t3.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
+<p id="vuosi"></p>
+<script>
+  let alku, loppu;
 
+  alku = prompt('Syötä aloitus vuosi');
+  loppu = prompt('Syötä lopetus vuosi');
+  let vuodet = '<ul>';
+  for (i = alku; i <= loppu; i++) {
+
+    if ((0 === i % 4) && (0 !== i % 100) || (0 === i % 400)) {
+      vuodet += '<li>' + i + '</li>';
+    }
+  }
+  vuodet += '</ul>';
+  document.getElementById('vuosi').innerHTML = vuodet;
+</script>
 </body>
 </html>
