--- a/JS-t4/js-t4.html
+++ b/JS-t4/js-t4.html
@@ -7,15 +7,17 @@
 <body>
  <script>
      let luvut = [];
-     let luku,anto;
-     luku=0;
+     let luku;
+     let i;
+     i=0;
 
-     do { luvut [luku] =  prompt('Syötä luku');
-       luku= luku+1;
-       document.write(luku);
-     } while (luku=!0);
+   do {
+     luku = prompt('Syötä numero');
+     luvut[i]=luku;
+    i++;
+   }while (luku===!0)
      luvut.sort();
-     document.write(luvut);
+   document.write(luvut);
  </script>
 </body>
 </html>
