--- a/DOM-tehtavat-master/teht3.html
+++ b/DOM-tehtavat-master/teht3.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM tehtävä 3</title>
+    <link href="css/teht3.css" rel="stylesheet">
 </head>
 <body>
-    <ul>
+    <ul class="a">
         <!-- lisää lista tänne -->
     </ul>
     <script src="js/teht3.js"></script>
