--- a/event-tehtavat-master/teht2.html
+++ b/event-tehtavat-master/teht2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Event tehtävä 2</title>
+    <link href="teht2.css" rel="stylesheet">
 </head>
 <body>
     <img src="http://placekitten.com/491/391" alt="kissa" id="kuva">
