--- a/JS-t6/js-t1.html
+++ b/JS-t6/js-t1.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
+ <script>
+     let maara, litra;
 
+
+     function muunnos() {
+       maara = +prompt('Syötä bensan määrä gallonoina');
+       litra = 3.79*maara;
+
+        document.write('Gallonat litroina: ' + litra, ' L');
+     }
+     muunnos();
+ </script>
 </body>
 </html>
