--- a/event-tehtavat-master/teht2.html
+++ b/event-tehtavat-master/teht2.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Event tehtävä 2</title>
+    <title>Event tehtävä 2</title>function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+    }
     <link href="teht2.css" rel="stylesheet">
 </head>
 <body>
