--- a/event-tehtavat-master/teht4A.html
+++ b/event-tehtavat-master/teht4A.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Event tehtävä 4</title>
+    <link href="teht4.css" rel="stylesheet">
 </head>
 <body>
     <!-- tulosta kuvakkeet tähän -->
