--- a/AjaxSovellus/index.html
+++ b/AjaxSovellus/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <img>
-<p id = "tulosta">
-</p>
-<input id="hakuteksti" type="text">
-<button id="hakunappi">Hae</button>
 
+
+<input class="center" id="hakuteksti" type="text">
+<button class="center" id="hakunappi">Hae</button>
+<div class="container" id = "tulosta">
+    <p id ="here" ></p>
+</div>
 <img src=""><img>
 
 <script src="haku.js"></script>
