--- a/AjaxSovellus/index.html
+++ b/AjaxSovellus/index.html
@@ -5,15 +5,16 @@
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<img>
-
+<header>
 
 <input class="center" id="hakuteksti" type="text">
 <button class="center" id="hakunappi">Hae</button>
+</header>
+<hr>
 <div class="container" id = "tulosta">
-    <p id ="here" ></p>
+
 </div>
-<img src=""><img>
+
 
 <script src="haku.js"></script>
 </body>
